# timewise

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  ampel_config.yml  benchmark_file_loading.py  benchmark_file_loading_10000000rows.txt  benchmark_file_loading_100000rows.txt  pyproject.toml  requirements.txt  setup.py  show_plots.ipynb
.github/workflows/: auto_merge.yml  continous_integration.yml  deploy.yml  test_deploy.yml
ampel/timewise/alert/: TimewiseAlertSupplier.py
ampel/timewise/alert/load/: TimewiseFileLoader.py
ampel/timewise/base/: BaseDatapointSelector.py
ampel/timewise/ingest/: TiCompilerOptions.py  TiDataPointShaper.py  TiDatapointShaper.py  TiMongoMuxer.py  tags.py
ampel/timewise/t1/: T1CombineWISEVisits.py  T1HDBSCAN.py  T1StackVisits.py  TimewiseFilter.py
ampel/timewise/t2/: T2StackVisits.py
ampel/timewise/util/: AuxDiagnosticPlotter.py  DiagnosticPlotter.py  IntIdConverter.py  pdutil.py
conf/timewise/: ampel.yml
docs/: requirements.txt
docs/source/: api.rst  classes.rst  cli.rst  conf.py  getting_started.md  index.rst  installation.rst  parent_sample.rst  wise_data.rst
examples/: timewise_quaia_demo.ipynb
notebooks/: check_new_binning.ipynb
tests/: 0_test_config.py  2_test_ps_utils.py  conftest.py  constants.py  dummy_tap.py  test_0_test_config.py  test_1_test_download.py  test_2_test_ps_utils.py  test_cli.py  test_download.py  test_file_loading.py  test_full.py  test_hdbscan.py  test_ingest.py  test_muxer.py  test_plot.py  test_queries.py  test_stacking.py  util.py
tests/data/: create_scipy_correction_file.py  create_test_data_from_v0.py  duplicate_mep_data.csv  mongodump.agz  scipy_tdist_quantiles.npy  template_ingest_only.yml  template_ingest_only_short.yml  template_stack.yml  template_stack_all.yml  test_download.yml  test_ingest.yml  test_sample.csv
tests/data/masks/: position_mask_c0.json  position_mask_c1.json
tests/data/photometry/: raw_photometry_allwise_p3as_mep__chunk0.csv  raw_photometry_allwise_p3as_mep__chunk1.csv  raw_photometry_neowiser_p1bs_psd__chunk0.csv  raw_photometry_neowiser_p1bs_psd__chunk1.csv  timewise_data_product_tap.json  timewise_data_product_tap_masked.json  timewise_data_product_tap_unmasked.json
tests/data/queries/: positional_allwise_fluxes.txt  positional_allwise_mag.txt  positional_allwise_p3as_mep_fluxes.txt  positional_allwise_p3as_mep_mag.txt  positional_allwise_p3as_mep_mag_fluxes.txt  positional_neowise_fluxes.txt  positional_neowise_mag.txt  positional_neowise_mag_fluxes.txt  positional_neowiser_p1bs_psd_fluxes.txt  positional_neowiser_p1bs_psd_mag.txt
timewise/: __init__.py  big_parent_sample.py  chunking.py  cli.py  config.py  config_loader.py  general.py  parent_sample_base.py  point_source_utils.py  types.py  utils.py  wise_bigdata_desy_cluster.py  wise_data_base.py  wise_data_by_visit.py
timewise/backend/: __init__.py  base.py  filesystem.py
timewise/io/: __init__.py  config.py  download.py  loader.py  stable_tap.py
timewise/plot/: __init__.py  diagnostic.py  lightcurve.py  panstarrs.py  sdss.py
timewise/process/: __init__.py  ampel.py  config.py  interface.py  keys.py  prepare.py  results.py  stacking.py  template.yml
timewise/query/: __init__.py  base.py  by_allwise_cntr.py  by_allwise_cntr_and_position.py  positional.py
timewise/query/positional/: base.py  positional_allwise.py  positional_allwise_p3as_mep.py  positional_neowise.py  positional_neowiser_p1bs_psd.py
timewise/slackbot/: __init__.py  config.py
timewise/tables/: __init__.py  allwise_p3as_mep.py  allwise_p3as_psd.py  base.py  neowiser_p1bs_psd.py
timewise/util/: backoff.py  csv_utils.py  error_threading.py  path.py  visits.py
timewise/v0/: config_loader.py  point_source_utils.py  wise_bigdata_desy_cluster.py  wise_data_base.py
