[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "timewise"
version = "0.5.3"
description = "A small package to download infrared data from the WISE satellite"
authors = [
    { name = "Jannis Necker", email = "jannis.necker@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "tqdm>=4.64.0,<5.0.0",
    "requests>=2.28.1,<3.0.0",
    "pandas>=1.4.3,<3.0.0",
    "numpy>=1.23.2,<2.0.0",
    "pyvo>=1.7.0,<2.0.0",
    "astropy>=5.1,<6.0.0",
    "matplotlib>=3.5.3,<4.0.0",
    "scikit-image>=0.19.3,<0.22.0",
    "backoff>=2.1.2,<3.0.0",
    "virtualenv>=20.16.3,<21.0.0",
    "seaborn>=0.11.2,<0.14.0",
    "urllib3==1.26.15",
    "pydantic>=1.9.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "jupyterlab[jupyter]>=4.0.6,<5.0.0",
    "jupyter[jupyter]>=1.0.0,<2.0.0",
]

[project.scripts]
timewise = "timewise.cli:timewise_cli"

[project.urls]
Homepage = "https://github.com/JannisNe/timewise"
Documentation = "https://timewise.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/JannisNe/timewise/issues"

[project.optional-dependencies]
dev = [
    "coveralls>=3.3.1,<4.0.0",
    "pytest>=7.2.2,<8.0.0",
]
docs = [
    "myst-parser>=1,<3",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]
