[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "timewise"
version = "1.0.0a9"
description = "Download WISE infrared data for many objects and process them with AMPEL"
authors = [
    { name = "Jannis Necker", email = "jannis.necker@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tqdm>=4.64.0,<5.0.0",
    "requests>=2.28.1,<3.0.0",
    "pandas>=1.4.3,<3.0.0",
    "numpy>=1.23.2,<3.0.0",
    "pyvo>=1.7.0,<2.0.0",
    "astropy>=5.1,<8.0.0",
    "matplotlib>=3.5.3,<4.0.0",
    "scikit-image>=0.26.0,<0.27.0",
    "backoff>=2.1.2,<3.0.0",
    "virtualenv>=20.16.3,<21.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "jupyterlab[jupyter]>=4.0.6,<5.0.0",
    "jupyter[jupyter]>=1.0.0,<2.0.0",
    "typer (>=0.19.2,<0.20.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
]

[tool.poetry]
packages = [
    {include = "ampel"},
    {include = "timewise"}
]

[project.scripts]
timewise = "timewise.cli:app"

[project.urls]
Homepage = "https://github.com/JannisNe/timewise"
"Bug Tracker" = "https://github.com/JannisNe/timewise/issues"

[project.optional-dependencies]
dev = [
    "coveralls>=3.3.1,<4.0.0",
    "pytest>=7.2.2,<8.0.0",
    "ruff>=0.13.0,<0.14.0",
    "mypy (>=1.18.2,<2.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "scipy-stubs (>=1.16.2.0,<2.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
]
docs = [
    "myst-parser>=1,<3",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "autodoc_pydantic[erdantic]>=2.2.0,<3.0.0"
]
ampel= [
    "ampel-photometry (==0.10.2a1)",
    "ampel-plot (>=0.9.1,<0.10.0)",
    "ampel-core (==0.10.6a17)",
    "ampel-alerts (==0.10.3a6)",
    "ampel-interface (==0.10.5a8)"
]

[tool.coverage.run]
source = ["timewise", "ampel"]
omit = ["timewise/v0"]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.pytest]
testpaths = "tests"
pythonpath = "."

# Per-module ignores
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
install_types = false
non_interactive = false
mypy_path = ["."]
packages = ["timewise", "ampel"]

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "pyvo.*",
    "SciServer.*",
    "sklearn.*"
]
ignore_missing_imports = true

[tool.ruff]
src = ["timewise", "ampel"]
exclude = ["tests", "SciScript-Python"]

[tool.ruff.lint]
ignore = ["F401"]